--- a/book_outlet/templates/book_outlet/index.html
+++ b/book_outlet/templates/book_outlet/index.html
@@ -10,4 +10,9 @@
       <li><a href="{{ book.get_absolute_url }}">{{ book.title }}</a> (Rating: {{ book.rating }})</li>
     {% endfor %}
   </ul>
+
+  <hr>
+
+  <p>Total Number Of Books: {{ total_number_of_books }}</p>
+  <p>Average Rating: {{ average_rating.rating__avg }}</p>
 {% endblock %}
