--- a/profiles/templates/profiles/create_profile.html
+++ b/profiles/templates/profiles/create_profile.html
@@ -9,9 +9,10 @@
   <link rel="stylesheet" href="{% static "profiles/styles.css" %}">
 </head>
 <body>
-  <form action="/profiles/" method="POST" enctype="multipart/form-data">
+  <form action="{% url "profiles" %}" method="POST" enctype="multipart/form-data">
+	  
     {% csrf_token %}
-    <input type="file" name="image" />
+    {{form}}
     <button>Upload!</button>
   </form>
 </body>
